--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 description = "Semantic grep for the AI era - natural language code search"
 license = "MIT"
 authors = ["searchgrep"]
+repository = "https://github.com/anthropics/searchgrep"
+homepage = "https://github.com/anthropics/searchgrep"
+keywords = ["search", "grep", "semantic", "ai", "code"]
+categories = ["command-line-utilities", "development-tools"]
+readme = "README.md"
 
 [[bin]]
 name = "searchgrep"
@@ -23,6 +28,7 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-feature
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bincode = "1.3"
 
 # File system
 walkdir = "2.4"
@@ -50,6 +56,9 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # Regex for code patterns
 regex = "1.10"
+
+# Parallel processing
+rayon = "1.10"
 
 # Candle for local embeddings with Accelerate (Apple Silicon optimized CPU)
 candle-core = { version = "0.8", features = ["accelerate"] }
