feat: add knowledge graph with graph and history commands
- Add graph command for visualizing code relationships (imports, importers)
- Add history command for viewing git commit history per file
- Add --related and --related-depth flags to search command
- Add load_graph_only() for fast graph loading (skips ANN index)
- Fix git commit parsing in parse_commits function
- Fix history command to use git directly as fast path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,9 @@ tokenizers = "0.15"
 # Math operations
 ndarray = "0.16"
 
+# Fast ANN search
+usearch = "2"
+
 # MCP Server (JSON-RPC over stdio)
 async-trait = "0.1"
 
