Add tree-sitter based chunking for AST-aware code parsing
- Add treesitter_chunker.rs with support for Rust, Python, JS/TS, Go, Java, C/C++
- Tree-sitter provides accurate AST-based chunking vs regex pattern matching
- Extracts semantic information: function/method names, parent context
- Automatic fallback to regex chunker for unsupported languages
- Integrated into fast_indexer with UnifiedChunk abstraction
- All tests passing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,17 @@ chrono = { version = "0.4", features = ["serde"] }
 # Regex for code patterns
 regex = "1.10"
 
+# Tree-sitter for AST-based code chunking
+tree-sitter = "0.24"
+tree-sitter-rust = "0.23"
+tree-sitter-python = "0.23"
+tree-sitter-javascript = "0.23"
+tree-sitter-typescript = "0.23"
+tree-sitter-go = "0.23"
+tree-sitter-java = "0.23"
+tree-sitter-c = "0.23"
+tree-sitter-cpp = "0.23"
+
 # Parallel processing
 rayon = "1.10"
 
