Fix: remove hardcoded paths, rename package to searchgrep
- Remove hardcoded /Users/kanayochukew path from src/main.rs
- Rename package from 'sgrep' to 'searchgrep' to avoid crates.io conflict
- Update repository URLs to RandomsUsernames/sgrep
- Update authors field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "sgrep"
+name = "searchgrep"
 version = "0.1.0"
 edition = "2021"
 description = "Semantic grep for the AI era - natural language code search"
 license = "MIT"
-authors = ["sgrep"]
-repository = "https://github.com/anthropics/sgrep"
-homepage = "https://github.com/anthropics/sgrep"
+authors = ["RandomsUsernames"]
+repository = "https://github.com/RandomsUsernames/sgrep"
+homepage = "https://github.com/RandomsUsernames/sgrep"
 keywords = ["search", "grep", "semantic", "ai", "code"]
 categories = ["command-line-utilities", "development-tools"]
 readme = "README.md"
